--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@ title: Home
 
 {% if page.url == "/" %}
 
+{% include jumbotron.html %}
+
 <!-- Featured
 ================================================== -->
 <section class="featured-posts">
