--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
 
 {% if page.url == "/" %}
 
-{% include jumbotron.html %}
+<!-- {% include jumbotron.html %} -->
 
 <!-- Featured
 ================================================== -->
