--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ title: Home
 ---
 
 {% if page.url == "/" %}
-  {% if site.jumbotron == true %}
-    {% include jumbotron.html %} 
+  {% if site.jumbotron_heder == true %}
+    {% include jumbotron_header.html %} 
   {% endif %} 
 
 <!-- Featured
