--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 
 {% if page.url == "/" %}
-  {% if site.jumbotron_heder == true %}
+  {% if site.jumbotron_header == true %}
     {% include jumbotron_header.html %} 
   {% endif %} 
 
