--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
         <h2><span>Artigos em Destaque</span></h2>
     </div>
     <div class="row">
-       {% for post in site.posts %}
+       {% for post in site.posts limit:2 %}
            {% if post.featured == true %}
                {% include featuredbox.html %}
            {% endif %}
