--- a/_pages/ebook2.html
+++ b/_pages/ebook2.html
@@ -1,9 +1,17 @@
----
-title: ebook2
-layout: page
-permalink: /ebook2/
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>404 HTML Template by Colorlib</title>
 
----
+	<!-- Google font -->
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
+
+	<!-- Custom stlylesheet -->
+	<link type="text/css" rel="stylesheet" href="/assets/css/ebook2.css" />
+</head>
 
 <body>
    
@@ -46,3 +54,4 @@ permalink: /ebook2/
     </div>
    
  </body>
+</html>
