--- a/_pages/page2.html
+++ b/_pages/page2.html
@@ -5,17 +5,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/images/logo2.png" type="image/x-icon">
 
   <title>Projeto Lar Bonito Lar</title>
 
-  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
-  <link rel="stylesheet" href="assets/tether/tether.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
-  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
+  <link rel="stylesheet" href="/assets/web/assets/mobirise-icons/mobirise-icons.css">
+  <link rel="stylesheet" href="/assets/tether/tether.min.css">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="/assets/bootstrap/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="/assets/theme/css/style.css">
+  <link rel="stylesheet" href="/assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
   
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="mbr-figure">
-                <img src="assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;">
+                <img src="/assets/images/imagem-landingpage-648-1024x648.png" alt="" title="" style="width: 75%;">
             </div>
         </div>
     </div>
@@ -79,7 +79,7 @@
 <section class="cid-rcolLMH0J0" id="image1-29">
     <figure class="mbr-figure container">
             <div class="image-block" style="width: 34%;">
-                <img src="assets/images/garantia-incondicional-466x404.png"  alt="Garantia Incondicional" title="Garantia Incondicional">  
+                <img src="/assets/images/garantia-incondicional-466x404.png"  alt="Garantia Incondicional" title="Garantia Incondicional">  
             </div>
     </figure>
 </section>
@@ -161,7 +161,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-figure" style="width: 50%;">
-                <img src="assets/images/imageedit-3.gif" alt="Mobirise" title="">
+                <img src="/assets/images/imageedit-3.gif" alt="Mobirise" title="">
             </div>
 
             <div class="media-content">
@@ -303,7 +303,7 @@
         <div class="media-container-row">
             <div class="mbr-figure">
               <!-- pr-lg-5" style="width: 30%;"-->
-              <img src="assets/images/imageedit-6.gif" alt="" title="" style="width: 200px;">
+              <img src="/assets/images/imageedit-6.gif" alt="" title="" style="width: 200px;">
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
                     <p class="mbr-text testimonial-text mbr-fonts-style display-7">
@@ -322,13 +322,13 @@
 
 
 
-  <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
-  <script src="assets/tether/tether.min.js"></script>
-  <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
-  <script src="assets/theme/js/script.js"></script>
+  <script src="/assets/web/assets/jquery/jquery.min.js"></script>
+  <script src="/assets/popper/popper.min.js"></script>
+  <script src="/assets/tether/tether.min.js"></script>
+  <script src="/assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/assets/smoothscroll/smooth-scroll.js"></script>
+  <script src="/assets/mbr-switch-arrow/mbr-switch-arrow.js"></script>
+  <script src="/assets/theme/js/script.js"></script>
   
   
 </body>
