--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
 			</div>
 			<h2>Oops! Página Não Encontrada</h2>
 			<p>Desculpe, mas a página que você está procurando não existe, ou está temporariamente indisponível</p>
-			<a href="https://www.trololodemulher.com.br">Voltar à Página Inicial</a>
+			<a href="https://www.lidianevasconcelos.com">Voltar à Página Inicial</a>
 		</div>
 	</div>
 </body>
